==> xxl1998/OmniWheelCar/Omni-Wheel-Car-Software-V2.0/HARDWARE_DRIVER/src/spi1.c <==
#include "spi1.h"

void SPI1_Init(void)
{
 	GPIO_InitTypeDef GPIO_InitStructure;
  SPI_InitTypeDef  SPI_InitStructure;

	RCC_APB2PeriphClockCmd(	RCC_APB2Periph_GPIOA|RCC_APB2Periph_SPI1, ENABLE );//PORTA时钟使能 
 
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_5 | GPIO_Pin_7;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;  //PB13/14/15复用推挽输出 
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOA, &GPIO_InitStructure);//初始化GPIOB

 	GPIO_SetBits(GPIOA,GPIO_Pin_5|GPIO_Pin_7);  //上拉
	
	SPI_InitStructure.SPI_Direction = SPI_Direction_1Line_Tx;  //设置SPI单向或者双向的数据模式:SPI设置为双线双向全双工
	SPI_InitStructure.SPI_Mode = SPI_Mode_Master;		//设置SPI工作模式:设置为主SPI
	SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;		//设置SPI的数据大小:SPI发送接收8位帧结构
	SPI_InitStructure.SPI_CPOL = SPI_CPOL_High;		//串行同步时钟的空闲状态为高电平
	SPI_InitStructure.SPI_CPHA = SPI_CPHA_1Edge;	//串行同步时钟的第二个跳变沿（上升或下降）数据被采样
	SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;		//NSS信号由硬件（NSS管脚）还是软件（使用SSI位）管理:内部NSS信号有SSI位控制
	SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_8;		//定义波特率预分频的值:波特率预分频值为256
	SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;	//指定数据传输从MSB位还是LSB位开始:数据传输从MSB位开始
	SPI_InitStructure.SPI_CRCPolynomial = 7;	//CRC值计算的多项式
	SPI_Init(SPI1, &SPI_InitStructure);  //根据SPI_InitStruct中指定的参数初始化外设SPIx寄存器
 
	SPI_Cmd(SPI1, ENABLE); //使能SPI外设
	
	SPI1_ReadWriteByte(0xff);//启动传输		 
}   
//SPI 速度设置函数
//SpeedSet:
//SPI_BaudRatePrescaler_2   2分频   
//SPI_BaudRatePrescaler_8   8分频   
//SPI_BaudRatePrescaler_16  16分频  
//SPI_BaudRatePrescaler_256 256分频  
void SPI1_SetSpeed(u8 SPI_BaudRatePrescaler)
{
  	assert_param(IS_SPI_BAUDRATE_PRESCALER(SPI_BaudRatePrescaler));
	SPI1->CR1&=0XFFC7;
	SPI1->CR1|=SPI_BaudRatePrescaler;	//设置SPI1速度 
	SPI_Cmd(SPI1,ENABLE); 
} 

//SPIx 读写一个字节
//TxData:要写入的字节
//返回值:读取到的字节
u8 SPI1_ReadWriteByte(u8 TxData)
{		
	u8 retry=0;				 	
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET) //检查指定的SPI标志位设置与否:发送缓存空标志位
		{
		retry++;
		if(retry>200)return 0;
		}			  
	SPI_I2S_SendData(SPI1, TxData); //通过外设SPIx发送一个数据
	retry=0;

	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET) //检查指定的SPI标志位设置与否:接受缓存非空标志位
		{
		retry++;
		if(retry>200)return 0;
		}	  						    
	return SPI_I2S_ReceiveData(SPI1); //返回通过SPIx最近接收的数据					    
}

//连续读 reg:要读取的寄存器地址  len:要读取的长度   buf:读取到的数据存储区
u8 SPI1_Read_Len(u8 reg,u8 len,u8 *buf,GPIO_TypeDef * CS_PORT,uint16_t CS_IO)
{  
	u8 i=0;
 	CS_PORT->BRR = CS_IO;                          //使能器件   	
	SPI1_ReadWriteByte(reg|0x80);    //发送读取状态寄存器命令    
	for(i=0;i<len-1;i++)buf[i]=SPI1_ReadWriteByte(reg|0x80+i+1);  //读取一个字节  
	buf[len-1]=SPI1_ReadWriteByte(0Xff);             //读取一个字节  
	CS_PORT->BSRR = CS_IO ;                             //取消片选    
	return 0;		
}
//写一个字节 
u8 SPI1_Write_Byte(u8 reg,u8 data,GPIO_TypeDef * CS_PORT,uint16_t CS_IO) 				 
{
	CS_PORT->BRR = CS_IO;                     //使能器件   
	SPI1_ReadWriteByte(reg);   //发送写取状态寄存器命令    
	SPI1_ReadWriteByte(data);               //写入一个字节  
	CS_PORT->BSRR = CS_IO ;       
	return 0;
}
//读一个字节   reg:寄存器地址 
u8 SPI1_Read_Byte(u8 reg,GPIO_TypeDef * CS_PORT,uint16_t CS_IO)
{
	u8 byte=0;
	CS_PORT->BRR = CS_IO;                       //使能器件   
	SPI1_ReadWriteByte(reg|0x80);    //发送读取状态寄存器命令    
	byte=SPI1_ReadWriteByte(0Xff);             //读取一个字节  
	CS_PORT->BSRR = CS_IO ;                            //取消片选     
	return byte;   
}

void CS_IO_Init(GPIO_TypeDef* GPIOx,uint16_t pin,uint32_t CS_APB2Periph_CLK)
{
	GPIO_InitTypeDef GPIO_InitStruct;
	
	RCC_APB2PeriphClockCmd(CS_APB2Periph_CLK,ENABLE);	
	
	GPIO_InitStruct.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_InitStruct.GPIO_Pin = pin;
	GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOx,&GPIO_InitStruct);
	
	GPIOx->BSRR = pin ;  
	delay_ms(1);
}




uint8_t spi2_write_reg(uint8_t reg_addr,uint8_t reg_val)
{
	SPI1_ReadWriteByte(reg_addr&0x7f);
	SPI1_ReadWriteByte(reg_val);
	return 0;
}


uint8_t spi2_read_reg(uint8_t reg_addr)
{
	SPI1_ReadWriteByte(reg_addr|0x80);
	return SPI1_ReadWriteByte(0xff);
}
uint8_t spi2_read_reg_buffer(uint8_t reg_addr,void *buffer,uint16_t len)
{
	uint8_t *p = buffer;
	uint16_t i;
	SPI1_ReadWriteByte(reg_addr|0x80);
	for(i=0;i<len;i++)
	{
		*p++= SPI1_ReadWriteByte(0xff);
	}
	return 0;
}
